--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -33,4 +33,13 @@
         tools:layout_editor_absoluteX="152dp"
         tools:layout_editor_absoluteY="472dp" />
 
+    <Button
+        android:id="@+id/button2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:onClick="transferFiles"
+        android:text="Transfer"
+        tools:layout_editor_absoluteX="168dp"
+        tools:layout_editor_absoluteY="88dp" />
+
 </android.support.constraint.ConstraintLayout>
