--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,14 +7,16 @@
     tools:context=".MainActivity">
 
     <TextView
-        android:layout_width="210dp"
-        android:layout_height="19dp"
-        android:layout_marginEnd="100dp"
         android:id="@+id/textView"
+        android:layout_width="210dp"
+        android:layout_height="376dp"
+        android:layout_marginEnd="100dp"
+        android:layout_marginBottom="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.711" />
 
     <Button
         android:id="@+id/button"
